src/test/deca/context/invalid/avecObjet/illegal_this_in_main_field_access.deca
// Description :
//    Utilisation de this dans le programme principal pour accéder à un champ.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

{
    this.x;
}

